force-app/main/default/objects/numm__Journal_Role__c/numm__Journal_Role__c.object-meta.xml
<CustomObject>
    <description>Affectation des établissements</description>
    <label>Role du journal</label>
    <nameField>
        <label>Journal (Role)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles du journal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>