force-app/main/default/objects/numm__Journal_Role__c/fields/numm__Code_Journal_Externe__c.field-meta.xml
<CustomField>
    <fullName>numm__Code_Journal_Externe__c</fullName>
    <label>Code Journal Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>