force-app/main/default/objects/numm__Journal_Role__c/fields/numm__Entity__c.field-meta.xml
<CustomField>
    <fullName>numm__Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entite</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipName>JournalRule</relationshipName>
    <type>Lookup</type>
</CustomField>