force-app/main/default/objects/numm__Journal_Role__c/fields/numm__Journal__c.field-meta.xml
<CustomField>
    <fullName>numm__Journal__c</fullName>
    <label>Journal</label>
    <referenceTo>numm__Journal__c</referenceTo>
    <relationshipLabel>Etablissements (Journal)</relationshipLabel>
    <relationshipName>Journaux_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>